add update text in check file

--- a/check.html
+++ b/check.html
@@ -23,7 +23,7 @@
             
             <div class="slider_column">
                 <div class="slider_column_Header">
-                    <span>What's New</span>
+                    <span>What's New update</span>
         
                 </div>
                 <div class="top-margin">
